--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -21,22 +21,10 @@ on:
         default: main
         type: string
     secrets:
-      TF_VAR_ARM_CLIENT_ID:
+      ARM_CLIENT_ID:
         required: true
-        type: string
-          # ${{ secrets.ARM_CLIENT_ID }}
-      TF_VAR_ARM_CLIENT_SECRET:
+      ARM_CLIENT_SECRET:
         required: true
-        type: string
-          # ${{ secrets.ARM_CLIENT_SECRET }}
-      TF_VAR_ARM_SUBSCRIPTION_ID:
-        required: true
-        type: string
-          # ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      TF_VAR_ARM_TENANT_ID:
-        required: true
-        type: string
-          # ${{ secrets.ARM_TENANT_ID }}
 
 jobs:
   fmt:
