--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -15,7 +15,7 @@ on:
         required: false
         default: dev
         type: string
-        description: "Enviroment to plan against"
+        description: "Environment to plan against"
       branch:
         required: false
         default: main
@@ -27,20 +27,12 @@ on:
         required: true
       ARM_CLIENT_SECRET:
         required: true
+      ARM_SUBSCRIPTION_ID:
+        required: true
+      ARM_TENANT_ID:
+        required: true
 
 jobs:
-  fmt:
-    name: "Terraform fmt check"
-    runs-on:
-      - self-hosted
-      - terraform-1.0
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Terraform fmt check
-        run: terraform fmt -check -recursive -diff
-  
   validate:
     name: "Terraform validate check"
     runs-on:
@@ -51,6 +43,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Terraform fmt check
+        run: terraform fmt -check -recursive -diff
+
       - name: Terraform validate
         run: terraform validate
         env:
@@ -58,6 +53,8 @@ jobs:
           ENVIRONMENT: ${{ inputs.environment }}
           TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
           TF_VAR_arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
   
   plan:
     name: Terraform Plan
@@ -81,6 +78,8 @@ jobs:
           ENVIRONMENT: ${{ inputs.environment }}
           TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
           TF_VAR_arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
   
   pullRequestComment:
     runs-on: ubuntu-latest
