--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Terraform validate
         run: terraform validate
         env:
-          ARM_ACCESS_KEY: ${{ secrets.AZURE_STORAGE_ACCOUNT_KEY }}
+          ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
           ENVIRONMENT: ${{ inputs.environment }}
           TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
           TF_VAR_arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -73,7 +73,7 @@ jobs:
           echo "##[set-output name=modified_terraform;]$(cat logs.txt | grep "No changes. Infrastructure is up-to-date." || true)"
         id: plan
         env:
-          ARM_ACCESS_KEY: ${{ secrets.AZURE_STORAGE_ACCOUNT_KEY }}
+          ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
           ENVIRONMENT: ${{ inputs.environment }}
           TF_VAR_arm_client_id: ${{ secrets.ARM_CLIENT_ID }}
           TF_VAR_arm_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
