--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -76,12 +76,14 @@ jobs:
           TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
   
   pullRequestComment:
+    name: Comment on PR
+    if: github.event.pull_request.base.ref != 'main'
     runs-on: ubuntu-latest
     needs:
       - plan
     steps:
       - name: Pull Request Comment
-        if: github.event.pull_request.base.ref != '' && contains( ${{ needs.plan.outputs.modified_terraform }}, 'No changes. Infrastructure is up-to-date.')
+        if: contains( ${{ needs.plan.outputs.modified_terraform }}, 'No changes. Infrastructure is up-to-date.')
         uses: unsplash/comment-on-pr@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
