--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -77,7 +77,7 @@ jobs:
   
   pullRequestComment:
     name: Comment on PR
-    if: github.event.pull_request.base.ref != 'main'
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     needs:
       - plan
