--- a/.github/workflows/terragrunt-apply-azure.yml
+++ b/.github/workflows/terragrunt-apply-azure.yml
@@ -37,7 +37,7 @@ jobs:
           TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
   
-  plan:
+  apply:
     name: Terraform Apply
     runs-on:
       - self-hosted
