--- a/.github/workflows/terragrunt-apply-azure.yml
+++ b/.github/workflows/terragrunt-apply-azure.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terragrunt apply
-        run: yes | terragrunt run-all apply --terragrunt-working-dir ${{ inputs.workingDirectory }} > logs.txt
+        run: yes | terragrunt run-all apply --terragrunt-working-dir ${{ inputs.workingDirectory }}
         env:
           ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
