--- a/.github/workflows/terragrunt-apply-azure.yml
+++ b/.github/workflows/terragrunt-apply-azure.yml
@@ -37,40 +37,20 @@ jobs:
           TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
   
-  plan:
-    name: Terraform Plan
+  apply:
+    name: Terraform Apply
     runs-on:
       - self-hosted
       - terraform-1.0
-    outputs:
-      modified_terraform: ${{ steps.plan.outputs.modified_terraform }}
     needs: validate
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
 
-      - name: Terragrunt plan
-        run: |
-          terragrunt run-all plan --terragrunt-working-dir ${{ inputs.workingDirectory }} | tee logs.txt
-          echo "##[set-output name=modified_terraform;]$(cat logs.txt | grep "No changes. Infrastructure is up-to-date." || true)"
-        id: plan
+      - name: Terragrunt apply
+        run: yes | terragrunt run-all apply --terragrunt-working-dir ${{ inputs.workingDirectory }}
         env:
           ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
           TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-  
-  pullRequestComment:
-    name: Comment on PR
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    needs:
-      - plan
-    steps:
-      - name: Pull Request Comment
-        if: contains( ${{ needs.plan.outputs.modified_terraform }}, 'No changes. Infrastructure is up-to-date.')
-        uses: unsplash/comment-on-pr@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          msg: "This PR will modify the currently deployed application in Azure"
