--- a/.github/workflows/terragrunt-plan-azure.yml
+++ b/.github/workflows/terragrunt-plan-azure.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Terragrunt plan
         run: |
+          set -o pipefail
           terragrunt run-all plan --terragrunt-working-dir ${{ inputs.workingDirectory }} | tee logs.txt
           echo "##[set-output name=modified_terraform;]$(cat logs.txt | grep "No changes. Infrastructure is up-to-date." || true)"
         id: plan
