--- a/.github/workflows/terragrunt-plan-azure.yml
+++ b/.github/workflows/terragrunt-plan-azure.yml
@@ -30,7 +30,7 @@ jobs:
         run: terraform fmt -check -recursive -diff
 
       - name: Terraform validate
-        run: terraform validate
+        run: terragrunt validate --terragrunt-working-dir ${{ inputs.workingDirectory }}
         env:
           ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -52,7 +52,7 @@ jobs:
       - name: Terragrunt plan
         run: |
           set -o pipefail
-          terragrunt run-all plan --terragrunt-working-dir ${{ inputs.workingDirectory }} | tee logs.txt
+          terragrunt plan --terragrunt-working-dir ${{ inputs.workingDirectory }} | tee logs.txt
           echo "##[set-output name=modified_terraform;]$(cat logs.txt | grep "No changes. Infrastructure is up-to-date." || true)"
         id: plan
         env:
