--- a/.github/workflows/terragrunt-plan-azure.yml
+++ b/.github/workflows/terragrunt-plan-azure.yml
@@ -34,8 +34,8 @@ jobs:
         env:
           ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   
   plan:
     name: Terraform Plan
@@ -58,8 +58,8 @@ jobs:
         env:
           ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
   
   pullRequestComment:
     name: Comment on PR
