--- a/.github/workflows/terragrunt-apply-azure.yml
+++ b/.github/workflows/terragrunt-apply-azure.yml
@@ -17,26 +17,6 @@ on:
         required: true
 
 jobs:
-  validate:
-    name: "Terraform fmt & validate"
-    runs-on:
-      - self-hosted
-      - terraform-1.0
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Terraform fmt check
-        run: terraform fmt -check -recursive -diff
-
-      - name: Terraform validate
-        run: terraform validate
-        env:
-          ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
-  
   apply:
     name: Terraform Apply
     runs-on:
@@ -48,9 +28,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Terragrunt apply
-        run: yes | terragrunt run-all apply --terragrunt-working-dir ${{ inputs.workingDirectory }}
+        run: terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.workingDirectory }}
         env:
           ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          TF_VAR_arm_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          TF_VAR_arm_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
