--- a/.github/workflows/terragrunt-apply-azure.yml
+++ b/.github/workflows/terragrunt-apply-azure.yml
@@ -4,8 +4,13 @@ on:
       workingDirectory:
         required: false
         type: string
-        description: "Location of Terragrunt files for execution"
+        description: "Location of Terragrunt config"
         default: ./
+      environment:
+        required: false
+        type: string
+        description: "GitHub environment to deploy to"
+        default: dev
     secrets:
       ARM_CLIENT_ID:
         required: true
@@ -18,6 +23,7 @@ on:
 
 jobs:
   apply:
+    environment: ${{ inputs.environment }}
     name: Terraform Apply
     runs-on:
       - self-hosted
@@ -30,7 +36,7 @@ jobs:
       - name: Terragrunt apply
         run: terragrunt apply -auto-approve --terragrunt-working-dir ${{ inputs.workingDirectory }}
         env:
-          ARM_CLIENT_ID : ${{ secrets.ARM_CLIENT_ID }}
+          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
